# heck

./: .clang-tidy  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  actor.cpp  actor.h  actor_collection.cpp  actor_collection.h  actor_factory.cpp  actor_factory.h  archetype.cpp  archetype.h  bitmask.cpp  bitmask.h  bsp_generator.cpp  bsp_generator.h  component.h  game.cpp  game.h  graphics.cpp  graphics.h  keyboard.cpp  keyboard.h  keyboard_input_component.cpp  keyboard_input_component.h  main.cpp  map.cpp  map.h  singleton.h  sprite_component.cpp  sprite_component.h  tileset.cpp  tileset.h
src/actions/: action.h  attack_action.cpp  attack_action.h  move_action.cpp  move_action.h  pass_action.cpp  pass_action.h  wait_action.cpp  wait_action.h
src/components/: ai_component.cpp  ai_component.h  component.h  keyboard_input_component.cpp  keyboard_input_component.h  sprite_component.cpp  sprite_component.h  transform_component.cpp  transform_component.h
